Add cupy to preprocessing

--- a/notebooks/test-arcticdem-datacube.ipynb
+++ b/notebooks/test-arcticdem-datacube.ipynb
@@ -9,6 +9,7 @@
     "import logging\n",
     "from pathlib import Path\n",
     "\n",
+    "import cupy_xarray  # noqa: F401\n",
     "import hvplot.xarray  # noqa: F401\n",
     "import rioxarray  # noqa: F401\n",
     "from darts_acquisition.planet import load_planet_scene\n",
@@ -26,7 +27,7 @@
     "    datefmt=\"[%X]\",\n",
     "    handlers=[RichHandler(rich_tracebacks=True)],\n",
     ")\n",
-    "traceback.install(show_locals=False)\n",
+    "traceback.install(show_locals=True)\n",
     "client = Client()\n",
     "configure_rio(cloud_defaults=True, aws={\"aws_unsigned\": True}, client=client)\n",
     "client"
@@ -52,7 +53,7 @@
    "outputs": [],
    "source": [
     "# load planet scene\n",
-    "ds_planet = load_planet_scene(fpath).isel(x=slice(0, 2000), y=slice(6000, 8000))\n",
+    "ds_planet = load_planet_scene(fpath)  # .isel(x=slice(0, 2000), y=slice(6000, 8000))\n",
     "ds_planet"
    ]
   },
@@ -71,7 +72,7 @@
    "source": [
     "from darts_acquisition.arcticdem import load_arcticdem_tile\n",
     "\n",
-    "ds = load_arcticdem_tile(ds_planet, arcticdem_dir, resolution=2, buffer=0)\n",
+    "ds = load_arcticdem_tile(ds_planet.odc.geobox, arcticdem_dir, resolution=2, buffer=0, persist=True)\n",
     "ds"
    ]
   },
@@ -92,8 +93,12 @@
    "outputs": [],
    "source": [
     "crs = ds_planet.rio.crs.to_string()\n",
-    "dem_plot = ds.dem.rio.reproject_match(ds_planet).hvplot.image(aggregator=\"max\", rasterize=True, cmap=\"terrain\")\n",
-    "red_plot = ds_planet.red.hvplot.image(x=\"x\", y=\"y\", aggregator=\"mean\", rasterize=True, cmap=\"reds\")\n",
+    "dem_plot = ds.dem.rio.reproject_match(ds_planet).hvplot.image(\n",
+    "    aggregator=\"max\", rasterize=True, cmap=\"terrain\", data_aspect=1, crs=crs, projection=crs\n",
+    ")\n",
+    "red_plot = ds_planet.red.hvplot.image(\n",
+    "    x=\"x\", y=\"y\", aggregator=\"mean\", rasterize=True, cmap=\"reds\", data_aspect=1, crs=crs, projection=crs\n",
+    ")\n",
     "dem_plot + red_plot"
    ]
   },
@@ -101,7 +106,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculate Relative Elevation and Slope"
+    "## Calculate Relative Elevation and Slope\n",
+    "\n",
+    "### Numpy\n",
+    "\n",
+    "Topographic Position Index calculated in 652.77 seconds.\n",
+    "Slope calculated in 3.67 seconds.\n",
+    "\n",
+    "### Dask (4 worker)\n",
+    "\n",
+    "Topographic Position Index calculated in 135.34 seconds.\n",
+    "Slope calculated in 4.33 seconds.\n",
+    "\n",
+    "### Cupy\n",
+    "\n",
+    "Topographic Position Index calculated in 12.69 seconds. \n",
+    "Slope calculated in 0.16 seconds.\n"
    ]
   },
   {
@@ -111,19 +131,16 @@
    "outputs": [],
    "source": [
     "from darts_preprocessing.engineering.arcticdem import calculate_slope, calculate_topographic_position_index\n",
+    "from xrspatial.utils import has_cuda_and_cupy\n",
     "\n",
+    "use_cupy = True\n",
+    "if use_cupy and has_cuda_and_cupy():\n",
+    "    ds = ds.cupy.as_cupy()\n",
     "ds = calculate_topographic_position_index(ds)\n",
     "ds = calculate_slope(ds)\n",
+    "if ds.cupy.is_cupy:\n",
+    "    ds = ds.cupy.as_numpy()\n",
     "ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds = ds.persist()"
    ]
   },
   {
@@ -134,13 +151,13 @@
    "source": [
     "crs = ds.rio.crs.to_string()\n",
     "dem_plot = ds.dem.hvplot.image(\n",
-    "    x=\"x\", y=\"y\", aggregator=\"max\", rasterize=True, cmap=\"terrain\", crs=crs, projection=crs, title=\"DEM\"\n",
+    "    x=\"x\", y=\"y\", aggregator=\"max\", rasterize=True, cmap=\"terrain\", data_aspect=1, crs=crs, projection=crs, title=\"DEM\"\n",
     ")\n",
     "tpi_plot = ds.tpi.hvplot.image(\n",
-    "    x=\"x\", y=\"y\", aggregator=\"max\", rasterize=True, cmap=\"terrain\", crs=crs, projection=crs, title=\"TPI\"\n",
+    "    x=\"x\", y=\"y\", aggregator=\"max\", rasterize=True, cmap=\"terrain\", data_aspect=1, crs=crs, projection=crs, title=\"TPI\"\n",
     ")\n",
     "slope_plot = ds.slope.hvplot.image(\n",
-    "    x=\"x\", y=\"y\", aggregator=\"max\", rasterize=True, cmap=\"terrain\", crs=crs, projection=crs, title=\"Slope\"\n",
+    "    x=\"x\", y=\"y\", aggregator=\"max\", rasterize=True, data_aspect=1, crs=crs, projection=crs, title=\"Slope\"\n",
     ")\n",
     "dem_plot + tpi_plot + slope_plot"
    ]
