--- a/notebooks/test-e2e.ipynb
+++ b/notebooks/test-e2e.ipynb
@@ -72,7 +72,7 @@
     "        )\n",
     "        for z in tile.data_vars\n",
     "    ]\n",
-    "    return hv.Layout(var_plots).cols(ncols)\n"
+    "    return hv.Layout(var_plots).cols(ncols)"
    ]
   },
   {
@@ -82,13 +82,13 @@
    "outputs": [],
    "source": [
     "cache_file = DATA_ROOT / \"intermediate\" / f\"planet_{fpath.stem}.nc\"\n",
-    "force = True\n",
+    "force = False\n",
     "slc = {\"x\": slice(0, 1000), \"y\": slice(7000, 8000)}\n",
     "if cache_file.exists() and not force:\n",
-    "    tile = xr.open_dataset(cache_file, engine=\"h5netcdf\", mask_and_scale=False).isel(slc)\n",
+    "    tile = xr.open_dataset(cache_file, engine=\"h5netcdf\", mask_and_scale=False).set_coords(\"spatial_ref\")\n",
     "else:\n",
     "    optical = load_planet_scene(fpath).isel(slc)\n",
-    "    arcticdem = load_arcticdem_tile(optical, arcticdem_dir, resolution=2)\n",
+    "    arcticdem = load_arcticdem_tile(optical.odc.geobox, arcticdem_dir, resolution=2)\n",
     "    tcvis = load_tcvis(optical, None if force else cache_dir)\n",
     "    data_masks = load_planet_masks(fpath).isel(slc)\n",
     "    tile = preprocess_legacy_fast(optical, arcticdem, tcvis, data_masks)\n",
