Add procedural tcvis datacube
Fix falsy cyclopts dependency specification
Rename reference_bbox to reference_geobox in arcticdem-datacube
Fix when tpi_inner_radious is 0
Add legacy tpi scaling

--- a/notebooks/test-e2e.ipynb
+++ b/notebooks/test-e2e.ipynb
@@ -46,7 +46,7 @@
     "# fpath = DATA_ROOT / \"input/planet/PSOrthoTile/4372514/5790392_4372514_2022-07-16_2459\"\n",
     "fpath = DATA_ROOT / \"input/planet/PSOrthoTile/4974017/5854937_4974017_2022-08-14_2475\"\n",
     "arcticdem_dir = DATA_ROOT / \"download/arcticdem\"\n",
-    "cache_dir = DATA_ROOT / \"download\""
+    "tcvis_dir = DATA_ROOT / \"download/tcvis\""
    ]
   },
   {
@@ -82,14 +82,14 @@
    "outputs": [],
    "source": [
     "cache_file = DATA_ROOT / \"intermediate\" / f\"planet_{fpath.stem}.nc\"\n",
-    "force = False\n",
+    "force = True\n",
     "slc = {\"x\": slice(0, 1000), \"y\": slice(7000, 8000)}\n",
     "if cache_file.exists() and not force:\n",
     "    tile = xr.open_dataset(cache_file, engine=\"h5netcdf\", mask_and_scale=False).set_coords(\"spatial_ref\")\n",
     "else:\n",
     "    optical = load_planet_scene(fpath).isel(slc)\n",
     "    arcticdem = load_arcticdem_tile(optical.odc.geobox, arcticdem_dir, resolution=2)\n",
-    "    tcvis = load_tcvis(optical, None if force else cache_dir)\n",
+    "    tcvis = load_tcvis(optical.odc.geobox, tcvis_dir)\n",
     "    data_masks = load_planet_masks(fpath).isel(slc)\n",
     "    tile = preprocess_legacy_fast(optical, arcticdem, tcvis, data_masks)\n",
     "    cache_file.parent.mkdir(exist_ok=True, parents=True)\n",
