Arcticdem preprocessing: first reproject

--- a/notebooks/test-e2e.ipynb
+++ b/notebooks/test-e2e.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import logging\n",
+    "from math import ceil\n",
     "from pathlib import Path\n",
     "\n",
     "import holoviews as hv\n",
@@ -87,11 +88,12 @@
     "if cache_file.exists() and not force:\n",
     "    tile = xr.open_dataset(cache_file, engine=\"h5netcdf\", mask_and_scale=False).set_coords(\"spatial_ref\")\n",
     "else:\n",
-    "    optical = load_planet_scene(fpath).isel(slc)\n",
-    "    arcticdem = load_arcticdem_tile(optical.odc.geobox, arcticdem_dir, resolution=2)\n",
+    "    tpi_outer_radius = 100\n",
+    "    optical = load_planet_scene(fpath)  # .isel(slc)\n",
+    "    arcticdem = load_arcticdem_tile(optical.odc.geobox, arcticdem_dir, buffer=ceil(tpi_outer_radius / 2), resolution=2)\n",
     "    tcvis = load_tcvis(optical.odc.geobox, tcvis_dir)\n",
     "    data_masks = load_planet_masks(fpath).isel(slc)\n",
-    "    tile = preprocess_legacy_fast(optical, arcticdem, tcvis, data_masks)\n",
+    "    tile = preprocess_legacy_fast(optical, arcticdem, tcvis, data_masks, tpi_outer_radius)\n",
     "    cache_file.parent.mkdir(exist_ok=True, parents=True)\n",
     "    tile.to_netcdf(cache_file, engine=\"h5netcdf\")\n",
     "\n",
@@ -106,8 +108,8 @@
    "outputs": [],
    "source": [
     "ensemble = EnsembleV1(\n",
-    "    \"../models/RTS_v6_tcvis.pt\",\n",
-    "    \"../models/RTS_v6_notcvis.pt\",\n",
+    "    Path(\"../models/RTS_v6_tcvis.pt\"),\n",
+    "    Path(\"../models/RTS_v6_notcvis.pt\"),\n",
     ")\n",
     "logging.info(ensemble.rts_v6_tcvis_model.config[\"input_combination\"])\n",
     "logging.info(ensemble.rts_v6_notcvis_model.config[\"input_combination\"])\n",
@@ -123,7 +125,7 @@
    "outputs": [],
    "source": [
     "tile = prepare_export(tile)\n",
-    "tile(tile)\n",
+    "display(tile)\n",
     "plot_tile(tile)"
    ]
   }
