Use legacy post processing

--- a/notebooks/test-e2e.ipynb
+++ b/notebooks/test-e2e.ipynb
@@ -7,9 +7,10 @@
    "outputs": [],
    "source": [
     "import logging\n",
-    "from math import ceil\n",
+    "from math import ceil, sqrt\n",
     "from pathlib import Path\n",
     "\n",
+    "import folium\n",
     "import holoviews as hv\n",
     "import hvplot.xarray  # noqa\n",
     "import xarray as xr\n",
@@ -73,7 +74,17 @@
     "        )\n",
     "        for z in tile.data_vars\n",
     "    ]\n",
-    "    return hv.Layout(var_plots).cols(ncols)"
+    "    return hv.Layout(var_plots).cols(ncols)\n",
+    "\n",
+    "\n",
+    "def plot_tile_interactive(tile: xr.Dataset) -> folium.Map:  # noqa\n",
+    "    m = folium.Map()\n",
+    "\n",
+    "    for z in tile.data_vars:\n",
+    "        tile[z].odc.add_to(map=m, name=z)\n",
+    "\n",
+    "    folium.LayerControl().add_to(m)\n",
+    "    return m"
    ]
   },
   {
@@ -84,13 +95,14 @@
    "source": [
     "cache_file = DATA_ROOT / \"intermediate\" / f\"planet_{fpath.stem}.nc\"\n",
     "force = True\n",
-    "slc = {\"x\": slice(0, 1000), \"y\": slice(7000, 8000)}\n",
+    "slc = {\"x\": slice(0, 2000), \"y\": slice(6000, 8000)}\n",
     "if cache_file.exists() and not force:\n",
     "    tile = xr.open_dataset(cache_file, engine=\"h5netcdf\", mask_and_scale=False).set_coords(\"spatial_ref\")\n",
     "else:\n",
     "    tpi_outer_radius = 100\n",
-    "    optical = load_planet_scene(fpath)  # .isel(slc)\n",
-    "    arcticdem = load_arcticdem_tile(optical.odc.geobox, arcticdem_dir, buffer=ceil(tpi_outer_radius / 2), resolution=2)\n",
+    "    buffer = ceil(tpi_outer_radius / 2 * sqrt(2))\n",
+    "    optical = load_planet_scene(fpath).isel(slc)\n",
+    "    arcticdem = load_arcticdem_tile(optical.odc.geobox, arcticdem_dir, buffer=buffer, resolution=2)\n",
     "    tcvis = load_tcvis(optical.odc.geobox, tcvis_dir)\n",
     "    data_masks = load_planet_masks(fpath).isel(slc)\n",
     "    tile = preprocess_legacy_fast(optical, arcticdem, tcvis, data_masks, tpi_outer_radius)\n",
@@ -98,7 +110,7 @@
     "    tile.to_netcdf(cache_file, engine=\"h5netcdf\")\n",
     "\n",
     "display(tile)\n",
-    "plot_tile(tile)"
+    "# plot_tile(tile)"
    ]
   },
   {
@@ -115,6 +127,25 @@
     "logging.info(ensemble.rts_v6_notcvis_model.config[\"input_combination\"])\n",
     "tile = ensemble(tile, batch_size=4, keep_inputs=True, patch_size=1024, overlap=256)\n",
     "display(tile)\n",
+    "# plot_tile(tile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tile = prepare_export(tile, use_quality_mask=True)\n",
+    "tile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plot_tile(tile)"
    ]
   },
@@ -124,9 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tile = prepare_export(tile)\n",
-    "display(tile)\n",
-    "plot_tile(tile)"
+    "plot_tile_interactive(tile)"
    ]
   }
  ],
