Implement wandb sweep and refactor logging

--- a/notebooks/test-e2e.ipynb
+++ b/notebooks/test-e2e.ipynb
@@ -24,9 +24,9 @@
     "from rich.logging import RichHandler\n",
     "\n",
     "from darts.utils.earthengine import init_ee\n",
-    "from darts.utils.logging import setup_logging\n",
+    "from darts.utils.logging import LoggingManager\n",
     "\n",
-    "setup_logging()\n",
+    "LoggingManager.setup_logging()\n",
     "logging.basicConfig(\n",
     "    level=logging.INFO,\n",
     "    format=\"%(message)s\",\n",
