--- a/notebooks/test-arcticdem-datacube.ipynb
+++ b/notebooks/test-arcticdem-datacube.ipynb
@@ -18,9 +18,9 @@
     "from rich import traceback\n",
     "from rich.logging import RichHandler\n",
     "\n",
-    "from darts.utils.logging import setup_logging\n",
+    "from darts.utils.logging import LoggingManager\n",
     "\n",
-    "setup_logging()\n",
+    "LoggingManager.setup_logging()\n",
     "logging.basicConfig(\n",
     "    level=logging.INFO,\n",
     "    format=\"%(message)s\",\n",
