Change training data from pytorch to zarr

--- a/notebooks/check_smp_combos.ipynb
+++ b/notebooks/check_smp_combos.ipynb
@@ -37,7 +37,6 @@
     "    \"mit_b2\",\n",
     "    \"tu-convnextv2_tiny\",\n",
     "    \"tu-hiera_tiny_224\",\n",
-    "    \"tu-mambaout_tiny\",\n",
     "    \"tu-maxvit_tiny_rw_224\",\n",
     "    \"tu-swin_s3_tiny_224\",\n",
     "]\n",
@@ -46,6 +45,7 @@
     "c = 11\n",
     "x = torch.randn(1, c, 256, 256)\n",
     "x = torch.randn(1, c, 224, 224)\n",
+    "x = torch.randn(1, c, 224 * 4, 224 * 4)\n",
     "\n",
     "combs = []\n",
     "for arch, encoder in track(itertools.product(archs, encoders), total=len(archs) * len(encoders)):\n",
