Fix ruff lint errors

--- a/notebooks/test-arcticdem-datacube.ipynb
+++ b/notebooks/test-arcticdem-datacube.ipynb
@@ -10,7 +10,7 @@
     "from pathlib import Path\n",
     "\n",
     "import cupy_xarray  # noqa: F401\n",
-    "import hvplot.xarray  # noqa: F401\n",
+    "import hvplot.xarray\n",
     "import rioxarray  # noqa: F401\n",
     "from darts_acquisition.planet import load_planet_scene\n",
     "from dask.distributed import Client\n",
