--- a/notebooks/test-e2e.ipynb
+++ b/notebooks/test-e2e.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "import folium\n",
     "import holoviews as hv\n",
-    "import hvplot.xarray  # noqa\n",
+    "import hvplot.xarray\n",
     "import xarray as xr\n",
     "from darts_acquisition.arcticdem import load_arcticdem_tile\n",
     "from darts_acquisition.planet import load_planet_masks, load_planet_scene\n",
