Generate API docs

--- a/notebooks/create_api_docs.ipynb
+++ b/notebooks/create_api_docs.ipynb
@@ -1,30 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import logging\n",
+    "# Doc-File generator\n",
     "\n",
-    "from rich.logging import RichHandler\n",
-    "from rich.traceback import install\n",
+    "For the public API documentation, we use this script to create for every public facing funtion a markdown file, containing their documentation via mkdocsstrings.\n",
     "\n",
-    "from darts.utils.earthengine import init_ee\n",
-    "from darts.utils.logging import LoggingManager\n",
-    "\n",
-    "LoggingManager.setup_logging()\n",
-    "logging.basicConfig(\n",
-    "    level=logging.INFO,\n",
-    "    format=\"%(message)s\",\n",
-    "    datefmt=\"[%X]\",\n",
-    "    handlers=[RichHandler(rich_tracebacks=True)],\n",
-    ")\n",
-    "install(\n",
-    "    show_locals=False, locals_hide_dunder=True, locals_hide_sunder=True\n",
-    ")  # Change to False if you encounter too large tracebacks\n",
-    "init_ee(\"ee-tobias-hoelzer\", use_highvolume=False)  # Replace with your project"
+    "We could have used [mkdocs-api-autonav](https://github.com/tlambert03/mkdocs-api-autonav) or [mkdocs-autoapi](https://github.com/jcayers20/mkdocs-autoapi) for this usecase.\n",
+    "However, we have quite a complicate code structue because of our workspace setup and we also don't follow the best-practices concerning public facing APIs.\n",
+    "Therefore, we manually create these files before buildtime of the docs without any further automation or linking done.\n",
+    "This script will generate the markdown files and in addition a string which can be copy-pasted to the mkdocs.yml: nav section."
    ]
   },
   {
@@ -34,86 +21,136 @@
    "outputs": [],
    "source": [
     "import importlib\n",
+    "from collections import defaultdict\n",
     "from inspect import getmembers, isclass, isfunction\n",
     "from pathlib import Path\n",
+    "from typing import Literal\n",
     "\n",
-    "modules = [\n",
-    "    \"darts.automated_pipeline\",  # -> DARTS Automated Pipeline\n",
+    "from rich import traceback\n",
+    "\n",
+    "traceback.install(\n",
+    "    show_locals=True, locals_hide_dunder=True, locals_hide_sunder=True\n",
+    ")  # Change to False if you encounter too large tracebacks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_level_modules = [\n",
     "    \"darts\",  # -> DARTS\n",
-    "    \"darts.legacy_pipeline\",  # -> DARTS Legacy Pipeline\n",
-    "    \"darts.legacy_training\",  # -> DARTS Legacy Training\n",
     "    \"darts_acquisition\",\n",
     "    \"darts_ensemble\",\n",
     "    \"darts_export\",\n",
     "    \"darts_postprocessing\",\n",
     "    \"darts_preprocessing\",\n",
     "    \"darts_segmentation\",\n",
+    "    \"darts_utils\",\n",
+    "    # \"darts_superresolution\",\n",
+    "]\n",
+    "second_level_modules = [\n",
+    "    \"darts.automated_pipeline\",  # -> DARTS Automated Pipeline\n",
+    "    \"darts.legacy_pipeline\",  # -> DARTS Legacy Pipeline\n",
+    "    \"darts.legacy_training\",  # -> DARTS Legacy Training\n",
     "    \"darts_segmentation.training\",\n",
     "    \"darts_segmentation.metrics\",\n",
-    "    # \"darts_superresolution\",\n",
-    "    # \"darts_utils.cuda\",\n",
-    "    # \"darts_utils.rich\",\n",
-    "    # \"darts_utils.stopuhr\",\n",
-    "    # TODO: dart.utils and darts_utils\n",
     "]\n",
+    "util_modules = {\n",
+    "    \"darts_utils.cuda\": [\"free_cupy\", \"free_torch\"],\n",
+    "    \"darts_utils.rich\": [\"RichManagerSingleton\"],\n",
+    "    \"darts_utils.stopuhr\": [\"stopuhr\", \"StopUhr\"],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docfilecontent = Literal[\"class\", \"function\"]\n",
+    "DocFileInfo = tuple[Path, docfilecontent]\n",
+    "DocFileInfos = dict[str, DocFileInfo]\n",
     "\n",
-    "for module in modules:\n",
-    "    module_docpath = Path(\"../docs/ref\") / module.replace(\".\", \"/\")\n",
-    "    module_docpath.mkdir(parents=True, exist_ok=True)\n",
-    "    modulepy = importlib.import_module(module)\n",
+    "\n",
+    "def _generate_module_docfiles(modulename: str, parent_docpath: Path, filter: list[str] | None = None) -> DocFileInfos:\n",
+    "    module = importlib.import_module(modulename)\n",
+    "    module_docpath = parent_docpath / modulename.split(\".\")[-1]\n",
+    "    module_docpath.mkdir(exist_ok=True, parents=True)\n",
+    "    module_header_name = modulename.replace(\".\", \": \").replace(\"_\", \" \").title().replace(\"Darts\", \"DARTS\")\n",
     "\n",
     "    toc = []\n",
-    "    for funcname, _ in getmembers(modulepy, isfunction):\n",
+    "    docfileinfos: DocFileInfos = {}\n",
+    "    for funcname, _ in getmembers(module, isfunction):\n",
+    "        if filter and funcname not in filter:\n",
+    "            continue\n",
     "        function_docfile = module_docpath / f\"{funcname}.md\"\n",
-    "        function_docfile.write_text(f\"::: {module}.{funcname}\\n\")\n",
-    "        # tocpath = function_docfile.relative_to(\"../docs\")\n",
-    "        tocpath = function_docfile.name\n",
-    "        toc.append(f\"[{funcname}]({tocpath})\\n\")\n",
-    "    for classname, _ in getmembers(modulepy, isclass):\n",
+    "        with function_docfile.open(\"w\") as f:\n",
+    "            f.write(\"---\\n\")\n",
+    "            f.write(\"hide:\\n\")\n",
+    "            f.write(\"  - toc\\n\")\n",
+    "            f.write(\"---\\n\")\n",
+    "            f.write(f\"# <code class='doc-symbol doc-symbol-nav doc-symbol-function'></code>{modulename}.{funcname}\\n\\n\")\n",
+    "            f.write(f\"::: {modulename}.{funcname}\\n\")\n",
+    "            f.write(\"    options:\\n\")\n",
+    "            f.write(\"      show_root_heading: false\\n\")\n",
+    "        toc_entry = f\"- [{funcname}]({funcname}.md)\\n\"\n",
+    "        toc.append(toc_entry)\n",
+    "        docfileinfos[funcname] = (function_docfile, \"function\")\n",
+    "    for classname, _ in getmembers(module, isclass):\n",
+    "        if filter and classname not in filter:\n",
+    "            continue\n",
     "        class_docfile = module_docpath / f\"{classname}.md\"\n",
-    "        class_docfile.write_text(f\"::: {module}.{classname}\\n\")\n",
-    "        # tocpath = class_docfile.relative_to(\"../docs\")\n",
-    "        tocpath = class_docfile.name\n",
-    "        toc.append(f\"- [{classname}]({(tocpath)})\\n\")\n",
+    "        with class_docfile.open(\"w\") as f:\n",
+    "            f.write(\"---\\n\")\n",
+    "            f.write(\"hide:\\n\")\n",
+    "            f.write(\"  - toc\\n\")\n",
+    "            f.write(\"---\\n\")\n",
+    "            f.write(f\"# <code class='doc-symbol doc-symbol-nav doc-symbol-class'></code>{modulename}.{classname}\\n\\n\")\n",
+    "            f.write(f\"::: {modulename}.{classname}\\n\")\n",
+    "            f.write(\"    options:\\n\")\n",
+    "            f.write(\"      show_root_heading: false\\n\")\n",
+    "        toc_entry = f\"- [{classname}]({classname}.md)\\n\"\n",
+    "        toc.append(toc_entry)\n",
+    "        docfileinfos[classname] = (class_docfile, \"class\")\n",
     "\n",
     "    module_docfile = module_docpath / \"index.md\"\n",
     "    with open(module_docfile, \"w\") as f:\n",
-    "        module_header_name = module.replace(\".\", \": \").replace(\"_\", \" \").title().replace(\"Darts\", \"DARTS\")\n",
-    "        f.write(f\"# {module_header_name} Reference\\n\\n\")\n",
+    "        f.write(f\"# <code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>{modulename}\\n\\n\")\n",
+    "        # f.write(f\"# {module_header_name} Reference\\n\\n\")\n",
+    "        f.write(f\"\\n::: {modulename}\\n\")\n",
+    "        f.write(\"    options:\\n\")\n",
+    "        f.write(\"      show_root_heading: false\\n\")\n",
+    "        f.write(\"      summary:\\n\")\n",
+    "        f.write(\"        attributes: true\\n\")\n",
+    "        f.write(\"        functions: true\\n\")\n",
+    "        f.write(\"        classes: true\\n\")\n",
+    "        f.write(\"        modules: false\\n\")\n",
+    "        f.write(\"      members: true\\n\")\n",
     "        f.writelines(toc)\n",
-    "        f.write(f\"::: {module}\\n\")\n",
-    "        # f.write(\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import defaultdict\n",
     "\n",
-    "navc = defaultdict(dict)\n",
-    "for module in modules:\n",
-    "    if \".\" in module:\n",
-    "        parent = module.split(\".\")[0]\n",
-    "        child = module.split(\".\")[1]\n",
-    "    else:\n",
-    "        parent = module\n",
-    "        child = \"index\"\n",
-    "    module_docpath = Path(\"../docs/ref\") / module.replace(\".\", \"/\")\n",
-    "    module_docfile = module_docpath / \"index.md\"\n",
-    "    module_header_name = module.replace(\"_\", \" \").replace(\"darts.\", \"\").title().replace(\"Darts\", \"DARTS\")\n",
-    "    nav = f\"\\t- {module_header_name}:\\n\"\n",
-    "    nav += f\"\\t\\t- {module_docfile.relative_to('../docs')}\\n\"\n",
-    "    for classname, _ in getmembers(importlib.import_module(module), isclass):\n",
-    "        class_docfile = module_docpath / f\"{classname}.md\"\n",
-    "        nav += f\"\\t\\t- {classname.replace('_', ' ')}: {class_docfile.relative_to('../docs')}\\n\"\n",
-    "    for funcname, _ in getmembers(importlib.import_module(module), isfunction):\n",
-    "        function_docfile = module_docpath / f\"{funcname}.md\"\n",
-    "        nav += f\"\\t\\t- {funcname.replace('_', ' ').title()}: {function_docfile.relative_to('../docs')}\\n\"\n",
-    "    navc[parent][child] = nav\n",
-    "print(navc)"
+    "    return docfileinfos\n",
+    "\n",
+    "\n",
+    "reference_docpath = Path(\"../docs/reference\")\n",
+    "reference_docpath.mkdir(exist_ok=True)\n",
+    "docfileinfos: dict[str, dict[str, DocFileInfo | DocFileInfos]] = defaultdict(dict)\n",
+    "\n",
+    "for slm in second_level_modules:\n",
+    "    parent, child = slm.split(\".\")\n",
+    "    docfileinfos[parent][child] = _generate_module_docfiles(slm, reference_docpath / parent)\n",
+    "\n",
+    "for tlm in top_level_modules:\n",
+    "    docfileinfos[tlm].update(_generate_module_docfiles(tlm, reference_docpath))\n",
+    "\n",
+    "for um, umfilter in util_modules.items():\n",
+    "    docfileinfos[\"darts_utils\"][um.split(\".\")[1]] = _generate_module_docfiles(\n",
+    "        um, reference_docpath / \"darts_utils\", umfilter\n",
+    "    )\n",
+    "\n",
+    "docfileinfos"
    ]
   },
   {
@@ -122,14 +159,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "navref = \"- Reference:\\n\"\n",
-    "for key, childs in navc.items():\n",
-    "    navref += childs[\"index\"]\n",
-    "    for child, nav in childs.items():\n",
-    "        if child != \"index\":\n",
-    "            navref += \"\\n\".join([f\"\\t{line}\" for line in nav.split(\"\\n\") if line])\n",
-    "        navref += \"\\n\"\n",
-    "print(navref)"
+    "# Create an API Reference overview file\n",
+    "with open(reference_docpath / \"index.md\", \"w\") as f:\n",
+    "    f.write(\"# DARTS API Reference\\n\\n\")\n",
+    "\n",
+    "    for tlm, tlm_docfileinfos in docfileinfos.items():\n",
+    "        tlm_header_name = tlm.replace(\".\", \": \").replace(\"_\", \" \").title().replace(\"Darts\", \"DARTS\")\n",
+    "        f.write(f\"- [{tlm_header_name}](./{tlm}/index.md)\\n\")\n",
+    "        for slm, slm_docfileinfos in tlm_docfileinfos.items():\n",
+    "            if isinstance(slm_docfileinfos, dict):\n",
+    "                slm_header_name = slm.replace(\".\", \": \").replace(\"_\", \" \").title().replace(\"Darts\", \"DARTS\")\n",
+    "                f.write(f\"  - [{slm_header_name}](./{tlm}/{slm}/index.md)\\n\")"
    ]
   },
   {
@@ -137,7 +177,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "navstring = \"\\t- API Reference:\\n\"\n",
+    "navstring += \"\\t\\t- reference/index.md\\n\"\n",
+    "for tlm, tlm_docfileinfos in docfileinfos.items():\n",
+    "    tlm_header = f\"<code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>{tlm}\"\n",
+    "    navstring += f\"\\t\\t- {tlm_header}:\\n\"\n",
+    "    navstring += f\"\\t\\t\\t- reference/{tlm}/index.md\\n\"\n",
+    "    for slm, slm_docfileinfos in tlm_docfileinfos.items():\n",
+    "        if isinstance(slm_docfileinfos, dict):\n",
+    "            slm_header = f\"<code class='doc-symbol doc-symbol-nav doc-symbol-module'></code>{slm}\"\n",
+    "            navstring += f\"\\t\\t\\t- {slm_header}:\\n\"\n",
+    "            navstring += f\"\\t\\t\\t\\t- reference/{tlm}/{slm}/index.md\\n\"\n",
+    "            for content_name, (content_docfile, content_type) in slm_docfileinfos.items():\n",
+    "                html_code_class = \"doc-symbol-class\" if content_type == \"class\" else \"doc-symbol-function\"\n",
+    "                content_header = f\"<code class='doc-symbol doc-symbol-nav {html_code_class}'></code>{content_name}\"\n",
+    "                navstring += f\"\\t\\t\\t\\t- {content_header}: reference/{tlm}/{slm}/{content_docfile.name}\\n\"\n",
+    "\n",
+    "        elif isinstance(slm_docfileinfos, tuple):\n",
+    "            content_name, (content_docfile, content_type) = slm, slm_docfileinfos\n",
+    "            html_code_class = \"doc-symbol-class\" if content_type == \"class\" else \"doc-symbol-function\"\n",
+    "            content_header = f\"<code class='doc-symbol doc-symbol-nav {html_code_class}'></code>{content_name}\"\n",
+    "            navstring += f\"\\t\\t\\t- {content_header}: reference/{tlm}/{content_docfile.name}\\n\"\n",
+    "navstring = navstring.replace(\"\\t\", \"    \")\n",
+    "print(navstring)"
+   ]
   }
  ],
  "metadata": {
