Move to smart-geocubes

--- a/notebooks/create_api_docs.ipynb
+++ b/notebooks/create_api_docs.ipynb
@@ -79,7 +79,7 @@
     "    module = importlib.import_module(modulename)\n",
     "    module_docpath = parent_docpath / modulename.split(\".\")[-1]\n",
     "    module_docpath.mkdir(exist_ok=True, parents=True)\n",
-    "    module_header_name = modulename.replace(\".\", \": \").replace(\"_\", \" \").title().replace(\"Darts\", \"DARTS\")\n",
+    "    # module_header_name = modulename.replace(\".\", \": \").replace(\"_\", \" \").title().replace(\"Darts\", \"DARTS\")\n",
     "\n",
     "    toc = []\n",
     "    docfileinfos: DocFileInfos = {}\n",
