--- a/notebooks/create_api_docs.ipynb
+++ b/notebooks/create_api_docs.ipynb
@@ -51,8 +51,7 @@
     "    # \"darts_superresolution\",\n",
     "]\n",
     "second_level_modules = [\n",
-    "    \"darts.automated_pipeline\",  # -> DARTS Automated Pipeline\n",
-    "    \"darts.legacy_pipeline\",  # -> DARTS Legacy Pipeline\n",
+    "    \"darts.pipelines\",  # -> DARTS Pipelines\n",
     "    \"darts.legacy_training\",  # -> DARTS Legacy Training\n",
     "    \"darts_segmentation.training\",\n",
     "    \"darts_segmentation.metrics\",\n",
@@ -60,7 +59,6 @@
     "util_modules = {\n",
     "    \"darts_utils.cuda\": [\"free_cupy\", \"free_torch\"],\n",
     "    \"darts_utils.rich\": [\"RichManagerSingleton\"],\n",
-    "    \"darts_utils.stopuhr\": [\"stopuhr\", \"StopUhr\"],\n",
     "}"
    ]
   },
